Disable borken json parsing for now

--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -104,7 +104,9 @@ fluentd:
   configMaps:
     general.conf: |
       <label @FLUENT_LOG>
-        @type null
+        <match **>
+          @type null
+        </match>
       </label>
       <source>
         @type http
