--- a/charts/kubezero-logging/templates/eck/elasticsearch.yaml
+++ b/charts/kubezero-logging/templates/eck/elasticsearch.yaml
@@ -23,6 +23,8 @@ spec:
       node.attr.zone: {{ .zone }}
       cluster.routing.allocation.awareness.attributes: zone
       {{- end }}
+      transport.compress: true
+      node.processors: {{- default 1 .processors }}
     podTemplate:
       {{- if $.Values.es.s3Snapshot.iamrole }}
       metadata:
