--- a/charts/kubezero-metrics/Chart.yaml
+++ b/charts/kubezero-metrics/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-metrics
 description: KubeZero Umbrella Chart for prometheus-operator
 type: application
-version: 0.1.4
+version: 0.2.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -15,10 +15,10 @@ dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
-  - name: prometheus-operator
-    version: 9.3.1
-    repository: https://kubernetes-charts.storage.googleapis.com/
+  - name: kube-prometheus-stack
+    version: 10.0.1
+    repository: https://prometheus-community.github.io/helm-charts
   - name: prometheus-adapter
-    version: 2.5.0
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 2.7.0
+    repository: https://prometheus-community.github.io/helm-charts
 kubeVersion: ">= 1.16.0"
