--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -11,7 +11,7 @@ prometheus:
     url: ""
     gateway: istio-system/ingressgateway
 
-prometheus-operator:
+kube-prometheus-stack:
   defaultRules:
     create: true
 
@@ -60,9 +60,9 @@ prometheus-operator:
   prometheusOperator:
     enabled: true
     #image:
-    #  tag: v0.41.0
+    #  tag: v0.42.1
     #prometheusConfigReloaderImage:
-    #  tag: v0.41.0
+    #  tag: v0.42.1
 
     # Run on controller nodes
     tolerations:
@@ -160,11 +160,11 @@ prometheus-adapter:
     default: false
     resource:
       cpu:
-        containerQuery: sum(irate(container_cpu_usage_seconds_total{<<.LabelMatchers>>,container!="POD",container!="",pod!=""}[5m])) by (<<.GroupBy>>)
-        nodeQuery: sum(1 - irate(node_cpu_seconds_total{mode="idle"}[5m]) * on(namespace, pod) group_left(node) node_namespace_pod:kube_pod_info:{<<.LabelMatchers>>}) by (<<.GroupBy>>)
+        containerQuery: sum(rate(container_cpu_usage_seconds_total{<<.LabelMatchers>>}[3m])) by (<<.GroupBy>>)
+        nodeQuery: sum(rate(container_cpu_usage_seconds_total{<<.LabelMatchers>>, id='/'}[3m])) by (<<.GroupBy>>)
         resources:
           overrides:
-            node:
+            instance:
               resource: node
             namespace:
               resource: namespace
@@ -172,15 +172,15 @@ prometheus-adapter:
               resource: pod
         containerLabel: container
       memory:
-        containerQuery: sum(container_memory_working_set_bytes{<<.LabelMatchers>>,container!="POD",container!="",pod!=""}) by (<<.GroupBy>>)
-        nodeQuery: sum(node_memory_MemTotal_bytes{job="node-exporter",<<.LabelMatchers>>} - node_memory_MemAvailable_bytes{job="node-exporter",<<.LabelMatchers>>}) by (<<.GroupBy>>)
+        containerQuery: sum(container_memory_working_set_bytes{<<.LabelMatchers>>}) by (<<.GroupBy>>)
+        nodeQuery: sum(container_memory_working_set_bytes{<<.LabelMatchers>>,id='/'}) by (<<.GroupBy>>)
         resources:
           overrides:
-            node:
+            instance:
               resource: node
             namespace:
               resource: namespace
             pod:
               resource: pod
         containerLabel: container
-      window: 5m
+      window: 3m
