--- a/charts/kubezero-aws-efs-csi-driver/templates/efs_pv.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/templates/efs_pv.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.PersistentVolume }}
 {{- if .Values.PersistentVolume.create }}
 apiVersion: v1
 kind: PersistentVolume
@@ -16,4 +17,5 @@ spec:
   csi:
     driver: efs.csi.aws.com
     volumeHandle: {{ .Values.PersistentVolume.EfsId }}
+{{- end }}
 {{- end }}
