--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -124,9 +124,9 @@ kubezero:
           {{- toYaml . | nindent 10 }}
           {{- end }}
       {{- end }}
-      {{- if index .Values "metrics" "prometheus-operator" }}
-      prometheus-operator:
-        {{- with index .Values "metrics" "prometheus-operator" }}
+      {{- if index .Values "metrics" "kube-prometheus-stack" }}
+      kube-prometheus-stack:
+        {{- with index .Values "metrics" "kube-prometheus-stack" }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
