--- a/charts/kubezero-istio/templates/ingress-certificate.yaml
+++ b/charts/kubezero-istio/templates/ingress-certificate.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.dnsNames }}
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: public-ingress-cert
