--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -8,6 +8,9 @@ metadata:
 spec:
   profile: empty
   components:
+    base:
+      enabled: true
+    {{- if .Values.ingress.public.enabled }}
     ingressGateways:
     - enabled: true
       k8s:
@@ -62,6 +65,7 @@ spec:
               value: 90
 
       name: istio-ingressgateway
+    {{- end }}
     pilot:
       enabled: true
       k8s:
@@ -102,6 +106,7 @@ spec:
       interval: 30s
       time: 60s
   values:
+    {{- if .Values.ingress.public.enabled }}
     gateways:
       istio-ingressgateway:
         autoscaleEnabled: {{ .Values.ingress.autoscaleEnabled }}
@@ -134,6 +139,7 @@ spec:
           {{- if eq .Values.ingress.type "NodePort" }}
           nodePort: 30443
           {{- end }}
+    {{- end }}
     global:
       jwtPolicy: first-party-jwt
       logAsJson: true
