--- a/charts/kubezero-kiam/templates/certificates.yaml
+++ b/charts/kubezero-kiam/templates/certificates.yaml
@@ -1,28 +1,32 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: kiam-agent
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   secretName: kiam-agent-tls
   issuerRef:
     name: kubezero-local-ca-issuer
+    kind: ClusterIssuer
   usages:
   - "any"
   dnsNames:
   - "kiam-agent"
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: kiam-server
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   secretName: kiam-server-tls
   issuerRef:
     name: kubezero-local-ca-issuer
+    kind: ClusterIssuer
   usages:
   - "any"
   dnsNames:
