--- a/charts/kubezero-logging/Chart.yaml
+++ b/charts/kubezero-logging/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: kubezero-logging
 description: KubeZero Umbrella Chart for complete EFK stack
 type: application
-version: 0.4.1
-appVersion: 1.2.1
+version: 0.5.0
+appVersion: 1.3.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -18,6 +18,10 @@ dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
+  - name: eck-operator
+    version: 1.3.0
+    repository: https://helm.elastic.co
+    condition: eck-operator.enabled
   - name: fluentd
     version: 2.5.1
     repository: https://kubernetes-charts.storage.googleapis.com/
