--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -1,8 +1,16 @@
 # use this for backwards compatability
 # fullnameOverride: ""
 
+eck-operator:
+  enabled: false
+  tolerations:
+  - key: node-role.kubernetes.io/master
+    effect: NoSchedule
+  nodeSelector:
+    node-role.kubernetes.io/master: ""
+
 # Version for ElasticSearch and Kibana have to match so we define it at top-level
-version: 7.8.1
+version: 7.10.0
 
 elastic_password: "" # super_secret_elastic_password
 
@@ -67,7 +75,7 @@ fluentd:
       enabled: true
       additionalLabels:
         release: metrics
-      namespace: monitoring
+      # namespace: monitoring
 
   output:
     # Default should be "logging-kubezero-logging-es-http" if fullnameOverride is NOT used
