--- a/charts/kubezero-metrics/Chart.yaml
+++ b/charts/kubezero-metrics/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-metrics
 description: KubeZero Umbrella Chart for prometheus-operator
 type: application
-version: 0.2.1
+version: 0.3.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -16,9 +16,10 @@ dependencies:
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
   - name: kube-prometheus-stack
-    version: 10.1.3
+    version: 11.1.1
     repository: https://prometheus-community.github.io/helm-charts
   - name: prometheus-adapter
-    version: 2.7.0
+    version: 2.7.1
     repository: https://prometheus-community.github.io/helm-charts
+    condition: prometheus-adapter.enabled
 kubeVersion: ">= 1.16.0"
