--- a/charts/kubezero-redis/Chart.yaml
+++ b/charts/kubezero-redis/Chart.yaml
@@ -1,20 +1,20 @@
 apiVersion: v2
-description: KubeZero ArgoCD Helm chart to install ArgoCD itself and the KubeZero ArgoCD Application
-name: kubezero-argo-cd
-version: 0.6.1
+name: kubezero-redis
+description: KubeZero Umbrella Chart for Redis HA
+type: application
+version: 0.1.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
-  - argocd
-  - gitops
+  - redis
 maintainers:
   - name: Quarky9
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
-  - name: argo-cd
-    version: 2.9.5
-    repository: https://argoproj.github.io/argo-helm
-kubeVersion: ">= 1.17.0"
+  - name: redis
+    version: 12.0.0
+    repository: https://charts.bitnami.com/bitnami
+kubeVersion: ">= 1.16.0"
