--- a/charts/kubezero/Chart.yaml
+++ b/charts/kubezero/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: kubezero
-description: KubeZero ArgoCD Application - Root App of Apps chart of KubeZero
+description: KubeZero - Bootstrap and ArgoCD Root App of Apps chart
 type: application
-version: 0.4.5
+version: 0.5.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
