--- a/charts/kubezero/templates/aws-efs-csi-driver.yaml
+++ b/charts/kubezero/templates/aws-efs-csi-driver.yaml
@@ -1,3 +1,24 @@
-{{- if index .Values "aws-efs-csi-driver" "enabled" }}
-{{ include "kubezero-app.app" . }}
+{{- define "aws-efs-csi-driver-values" }}
+{{- with index .Values "aws-efs-csi-driver" "nodeSelector" }}
+aws-efs-csi-driver:
+  nodeSelector:
+  {{- toYaml . | nindent 4 }}
 {{- end }}
+{{- with index .Values "aws-efs-csi-driver" "PersistentVolumes" }}
+PersistentVolumes:
+{{- toYaml . | nindent 2 }}
+{{- end }}
+{{- if index .Values "aws-efs-csi-driver" "EfsId" }}
+PersistentVolume:
+  create: true
+  EfsId: {{ index .Values "aws-efs-csi-driver" "EfsId" }}
+  Name: {{ default "kubezero-efs-pv" ( index .Values "aws-efs-csi-driver" "PVName" ) }}
+{{- end }}
+
+{{- end }}
+
+
+{{- define "aws-efs-csi-driver-argo" }}
+{{- end }}
+
+{{ include "kubezero-app.app" . }}
