--- a/charts/kubezero/templates/cert-manager.yaml
+++ b/charts/kubezero/templates/cert-manager.yaml
@@ -1,13 +1,23 @@
-{{- if index .Values "cert-manager" "enabled" }}
-{{ include "kubezero-app.app" . }}
+{{- define "cert-manager-values" }}
+localCA:
+  enabled: true
+{{ with index .Values "cert-manager" "IamArn" }}
+cert-manager:
+  podAnnotations:
+    iam.amazonaws.com/role: "{{ . }}"
+{{- end }}
 
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: cert-manager
-{{- if index .Values "kiam" "enabled" }}
-  annotations:
-    iam.amazonaws.com/permitted: ".*CertManagerRole.*"
+{{- with index .Values "cert-manager" "clusterIssuer" }}
+clusterIssuer:
+  {{- . | toYaml | nindent 2 }}
 {{- end }}
+
 {{- end }}
+
+
+{{- define "cert-manager-argo" }}
+{{- end }}
+
+{{- end }}
+
+{{ include "kubezero-app.app" . }}
